--- a/Game Folder/css/styles.css
+++ b/Game Folder/css/styles.css
@@ -3,7 +3,7 @@ body {
   position: relative;
   margin:0 auto;
   min-width: 900px;
-  background-image: url(images/GrassTile.jpg);
+  background-image: url(../images/GrassTile.jpg);
 
 }
 #top {
@@ -101,7 +101,7 @@ p {
   width: 100%;
   bottom: 0;
   text-align: center;
-  background-image: url(images/GrassBackground.png);
+  background-image: url(../images/GrassBackground.png);
   min-width: 900px;
 }
 #player1 {
