--- a/Game Folder/css/styles.css
+++ b/Game Folder/css/styles.css
@@ -41,7 +41,7 @@ h2 {
 h3 {
   text-align: center;
   font-family: 'Luckiest Guy', cursive;
-  font-size: 60px;
+  font-size: 6vw;
   color: white;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
@@ -179,7 +179,7 @@ li {
   position: relative;
   color: black;
   font-size: 30px;
-  top: 650px;
+  top: 100px;
   width: 40%;
   margin: 0 auto;
   text-align: left;
@@ -191,11 +191,26 @@ li {
 #disclaimer {
   position: relative;
   color: white;
-  top: 700px;
+  top: 570px;
   font-size: 30px;
   text-align: center;
   width: 600px;
   margin:0 auto;
+}
+
+@media (max-width: 1100px) and (min-width: 850px) {
+  h1 {
+    display: inline-block;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 3.5em;
+    color: rgb(254, 207, 42);
+    -webkit-text-stroke: 2px rgb(48, 93, 195);
+    margin-top: 60px;
+  }
+  #top img{
+    display: inline-block;
+    width: 160px;
+  }
 }
 /*
 /////////   THIS IS FOR THE INTRO PAGE!!!! //////////////////
