--- a/gamefolder/css/styles.css
+++ b/gamefolder/css/styles.css
@@ -1,5 +1,5 @@
 * {
-  top: 0
+  margin: 0;
 }
 body {
   position: relative;
@@ -13,39 +13,6 @@ body {
   text-align: center;
   height: 50px;
   margin: 0;
-}
-.decider {
-  display: inline-block;
-  font-family: 'Luckiest Guy', cursive;
-  margin: 0;
-  font-size: 40px;
-  text-align: center;
-  padding: 0;
-}
-ul {
-  margin: 0;
-}
-#leftChoice {
-  position: absolute;
-  display: inline-block;
-  -webkit-text-stroke: 2px black;
-  color: rgb(255, 255, 255);
-  width: 250px;
-  margin:0;
-  top: 100px;
-  left: 26%;
-
-}
-#rightChoice {
-  position: absolute;
-  display: inline-block;
-  -webkit-text-stroke: 2px black;
-  color: rgb(255, 255, 255);
-  width: 250px;
-  margin: 0;
-  top: 100px;
-  right: 27%;
-
 }
 h1 {
   display: inline-block;
@@ -65,11 +32,10 @@ h2 {
 h3 {
   text-align: center;
   font-family: 'Luckiest Guy', cursive;
-  font-size: 35px;
+  font-size: 45px;
   color: white;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
-
 .scores {
   position: relative;
   font-family: 'Luckiest Guy', cursive;
@@ -86,7 +52,6 @@ h3 {
   bottom: -20px;
   left: 0;
 }
-
 .score-box2 {
   position: absolute;
   display: inline-block;
@@ -94,7 +59,6 @@ h3 {
   right: 0;
   bottom: -20px;
 }
-
 .monsterBox1 {
   position: absolute;
   display: inline-block;
@@ -105,7 +69,7 @@ h3 {
 }
 .monsterBox2 {
   position: absolute;
-  right: 13%;
+  right: 14%;
   width: 20%;
   height: 100%;
   top: 10px;
@@ -124,7 +88,6 @@ h3 {
   bottom: 0;
   text-align: center;
   background-image: url(../images/GrassBackground.png);
-
 }
 #player1 {
   position: absolute;
@@ -134,22 +97,49 @@ h3 {
   left: 0;
   margin-left: -10px;
   width: 240px;
-
 }
 #pic1 {
   width: 75%;
   height: auto;
+  bottom: 0;
 }
 li {
   list-style: none;
   display: inline-block;
 }
-
 #arena {
+  padding-top: 20px;
   width: 500px;
   margin: 0 auto;
 }
-
+.decider {
+  display: inline-block;
+  font-family: 'Luckiest Guy', cursive;
+  margin: 0;
+  font-size: 40px;
+  text-align: center;
+  padding: 0;
+}
+#leftChoice {
+  position: absolute;
+  display: inline-block;
+  -webkit-text-stroke: 2px black;
+  color: rgb(255, 255, 255);
+  width: 250px;
+  margin:0;
+  top: 100px;
+  left: 26%;
+}
+#rightChoice {
+  position: absolute;
+  display: inline-block;
+  -webkit-text-stroke: 2px black;
+  color: rgb(255, 255, 255);
+  width: 250px;
+  margin: 0;
+  top: 100px;
+  right: 27%;
+}
 #player2 {
   position: absolute;
   display:inline-block;
@@ -165,20 +155,23 @@ li {
 }
 
 #bottom {
-  position: relative;
-  top: 353px;
-  height:100px;
+  position: absolute;
+  top: 450px;
+  height:100%;
   width: 100%;
   font-family: 'Luckiest Guy', cursive;
-  padding: 20px 0;
+  background-image: url("../images/border.png");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  background-attachment: fixed;
 }
-
 #instructions {
   font-family: 'VT323', ;
   position: relative;
   color: black;
   font-size: 30px;
-  top: 0px;
+  top: 100px;
   width: 40%;
   margin: 0 auto;
   text-align: left;
@@ -234,116 +227,85 @@ li {
   margin:0 auto;
 }
 
-@media (max-width: 1100px) and (min-width: 451px) {
-  #top {
-    margin-top: 20px;
-  }
-  #top img{
-    display: none;
-  }
-  #logoleft {
-    float: left;
-  }
-  #logoright {
-    float: right;
-    transform: scaleX(-1);
-  }
-  h1 {
-    font-size: 8vw;
-  }
-  h2 {
-    font-size: 3vw;
-  }
+@media (max-width: 1100px) and (min-width: 901px) {
   h3 {
-    font-size: 5vw;
-  }
-  .scores {
-    font-size: 5vw;
-  }
-
-  #player1 {
-    margin-left: 10px;
-    width: 100px;
-  }
-  #player1 img {
-    width: 100%;
-  }
-  #arena {
-    width: 100%;
-    height: 200px;
-    text-align: center;
-  }
-  #player2 {
-    width: 100px;
-    right: 13px;
-  }
-  #player2 img {
-    width: 107%;
+    font-size: 35px;
   }
   .decider {
-    font-size: 4vw;
-  }
-  #playerText {
-    width: 100%;
-    text-align: left;
-  }
-  #computerText {
-    width: 100%;;
-    right: 5%;
-    text-align: right;
+    font-size: 25px;
+    text-align: center;
+    padding: 0;
   }
   #instructions {
-    font-size: 3vw;
-    width: 40%;
-    padding: 20px 20px;
+    font-size: 25px;
+    top: 100px;
+    padding: 10px 50px;
   }
   #ending {
-    font-size: 5vw;
-    top: 80px;
-    width: 40%;
-    height: 40%;
-    padding: 5px 20px;
+    top: 100px;
   }
   #ending h5{
     margin: 10px auto;
     padding-bottom: 10px;
   }
-  #button {
-    height: 30px;
-    width: 120px;
-    border-radius: 8px;
-    border: 2px solid black;
-    font-size: 25px;
-    font-family: 'VT323', ;
-  }
-  #disclaimer {
-    top: 530px;
-    width: 100%;
-  }
-  #disclaimer1 {
-    position: relative;
-    color: white;
-    top: 700px;
+}
+@media (max-width: 900px) and (min-width: 650px) {
+  h3 {
     font-size: 30px;
-    text-align: center;
-    width: 100%;
-    margin:0 auto;
   }
-  .select1 {
-    width: 140%;
-    padding: 4px 0;
+  #player1 {
+    left: 3%;
+    width: 110px;
+    top: 25%;
   }
-  .select2 {
-    width: 140%;
+  #player2 {
+    right: 1%;
+    width: 110px;
+    top: 25%;
   }
   .monsterBox1 {
-    margin-left: 0;
-    left: 17%;
-    top: 12%;
+    left: 19%;
+    top: 17%;
+    z-index: 7;
   }
   .monsterBox2 {
+    right: 22%;
     top: 13%;
-    right: 27%;
+  }
+  .decider {
+    font-size: 25px;
+  }
+  #leftChoice {
+    width: 120px;
+    top: 10px;
+    left: 0;
+  }
+  #rightChoice {
+    width: 120px;
+    top: 10px;
+    right: 0;
+  }
+  .scores {
+    font-size: 30px;
+    top: 250px;
+  }
+  .score-box1 {
+    left: -24%;
+  }
+  .score-box2 {
+    right: -24%;
+  }
+  #instructions {
+    font-size: 18px;
+    z-index: 9000;
+  }
+  #ending {
+    top: 100px;
+    font-size: 25px;
+    z-index: 9001;
+  }
+  a img {
+    width: 70px;
   }
 }
 /*
@@ -355,7 +317,7 @@ li {
   margin:0 auto;
   width: 600px;
   height: 400px;
-  margin-top: 300px;
+  margin-top: 100px;
 }
 #iconBox {
   position: absolute;
