--- a/gamefolder/css/styles.css
+++ b/gamefolder/css/styles.css
@@ -6,9 +6,7 @@
   font-family: Pixel;
   src: url(../fonts/pixel.ttf);
 }
-* {
-  margin: 0;
-}
+
 body {
   position: relative;
   margin:0 auto;
@@ -43,6 +41,7 @@ h3 {
   font-size: 45px;
   color: white;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
+  margin:20px 0;
 }
 .scores {
   position: relative;
@@ -57,19 +56,18 @@ h3 {
   position: absolute;
   display: inline-block;
   width: 40%;
-  bottom: -20px;
   left: 0;
+  bottom: 0;
 }
 .score-box2 {
   position: absolute;
   display: inline-block;
   width: 40%;
   right: 0;
-  bottom: -20px;
+  bottom: 0;
 }
 .monsterBox1 {
   position: absolute;
-  display: inline-block;
   left: 11%;
   width: 20%;
   height: 100%;
@@ -116,7 +114,7 @@ li {
   display: inline-block;
 }
 #arena {
-  padding-top: 20px;
+  padding-top: 0;
   width: 500px;
   margin: 0 auto;
 }
@@ -185,22 +183,21 @@ li {
   border: 5px solid black;
   border-radius: 20px;
   background-color: white;
+  z-index: 1000;
 }
 #ending {
   font-family: 'Pixel';
   position: relative;
   color: black;
   font-size: 40px;
-  top: 0;
   width: 40%;
-  height: 200px;
   margin: 0 auto;
-  text-align: left;
-  padding: 5px 30px;
   border: 5px solid black;
   border-radius: 20px;
   background-color: white;
   text-align: center;
+  top: 100px;
+  z-index: 1001;
 }
 #ending h5{
   margin: 20px 10px;
@@ -215,7 +212,6 @@ li {
   font-family: 'Pixel';
   background-color: lightgrey;
 }
-
 #disclaimer {
   color: white;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
@@ -296,12 +292,10 @@ li {
   }
   #instructions {
     font-size: 18px;
-    z-index: 9000;
   }
   #ending {
     top: 100px;
     font-size: 25px;
-    z-index: 9001;
   }
   a img {
     width: 70px;
